重构影子系统，重写为包缓冲系统

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,9 @@
     color: #FF6666;
 }
 #ballhp{
-    float: top;
+    position: absolute;
+    margin-left: 50%;
+    transform: TranslateX(-50%);
     color: #996600;
 }
 #damage2{
