--- a/css/index.css
+++ b/css/index.css
@@ -27,3 +27,13 @@
     float: right;
     color: #3399FF;
 }
+#resulta{
+    display: block;
+    font-size: 100px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    opacity: 0.5;
+    margin-top: 50%;
+    margin-left: 50%;
+}
