--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 #scene_div_parent{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 95%;
     overflow: hidden;
 }
 
@@ -21,6 +21,7 @@
     position: absolute;
     margin-left: 50%;
     transform: TranslateX(-50%);
+    z-index: 100;
     color: #996600;
 }
 #damage2{
@@ -29,7 +30,7 @@
 }
 #resulta{
     display: block;
-    font-size: 100px;
+    font-size: 50px;
     position: absolute;
     transform: translate(-50%, -50%);
     z-index: 100;
